# git-lore

./: .gitignore  Cargo.toml  README.md  git-lore-unified.md  install.sh  plan.md  resolve_tmp.rs  workflow.md
.github/: copilot-instructions.md  git-lore-skills.md
.github/agents/: architecture.agent.md
.mcp/: README.md  launch.sh
docs/: .test-lore-manifest.json  capabilities-ui.html  commit-trailers.md  compliance-matrix.md  entropy.md  file.html  lore-process-diagnosis-and-fix.md  lore-runner.js  mcp.md  merge-reconciliation.md  new-setup.html  next-steps.md  prism.md  progress-log.md  refs-lore.md  scope-detection.md  workflows.html
docs/user-manual/: checkpoint.md  commit.md  context.md  edit-atom.md  explain.md  index.md  init.md  install.md  mark.md  mcp.md  merge.md  propose.md  session-finish.md  session-start.md  set-state.md  signal.md  status.md  sync.md  validate.md
glore/: UI-UX-DESIGN.md  package-lock.json  package.json
glore/src/: App.css  App.tsx
glore/src-tauri/: Cargo.toml  tauri.conf.json
glore/src-tauri/src/: lib.rs  main.rs
glore/src/components/: ActivityConsole.tsx  ActivityStream.tsx  AtomDetailsPanel.tsx  GitDiffDrawer.tsx  LoreBrainGraph.tsx  LoreSidebar.tsx  RelationInsights.tsx  SignalInsights.tsx  loreGraphModel.ts
src/: lib.rs  main.rs
src/cli/: mod.rs
src/git/: mod.rs
src/lore/: entropy.rs  merge.rs  mod.rs  prism.rs  refs.rs  sanitize.rs  validation.rs
src/mcp/: mod.rs  semantic.rs  semantic_tests.rs  transport.rs
src/parser/: mod.rs
